# swcli

./: Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build.rs
.github/workflows/: release.yml
src/: cli.rs  copilot_proxy.rs  db.rs  github_copilot.rs  launch.rs  main.rs  models.rs  provider.rs  responses_chat_bridge.rs  responses_router.rs  store.rs  tui.rs
src/cli/: mod.rs
src/config/: mod.rs
src/launcher/: mod.rs
src/models/: mod.rs
src/nyro_protocol/: ids.rs  mod.rs  registry.rs  traits.rs  types.rs
src/nyro_protocol/codec/: mod.rs  reasoning.rs  tool_correlation.rs
src/nyro_protocol/codec/anthropic_messages/: decoder.rs  encoder.rs  messages.rs  mod.rs  stream.rs  types.rs
src/nyro_protocol/codec/google_generative/: decoder.rs  encoder.rs  generate_content.rs  mod.rs  stream.rs  types.rs
src/nyro_protocol/codec/openai_compatible/: chat_completions.rs  decoder.rs  embeddings.rs  encoder.rs  mod.rs  stream.rs  types.rs
src/nyro_protocol/codec/openai_responses/: decoder.rs  encoder.rs  formatter.rs  mod.rs  parser.rs  responses.rs  stream.rs
src/nyro_protocol/ir/: cache.rs  compat.rs  envelope.rs  error.rs  ext.rs  mod.rs  repair.rs  request.rs  response.rs  schema.rs  stream.rs  usage.rs  vendor_ext.rs
src/provider/: github_copilot.rs  mod.rs
src/router/: copilot_proxy.rs  debug.rs  mod.rs  responses.rs  responses_chat_bridge.rs
