[package]
name = "switchcli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "swcli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
aes-gcm = "0.10"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.43", features = ["macros", "process", "rt-multi-thread", "fs", "io-util", "net"] }

[build-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
