[package]
name = "swcli"
version = "0.1.2"
edition = "2024"
license = "MIT AND Apache-2.0"

[[bin]]
name = "swcli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
inventory = "0.3"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["macros", "process", "rt-multi-thread", "fs", "io-util", "net", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
